Settings are now stored in cookies, bug fixes

--- a/ALS.Glance.Web/Web.config
+++ b/ALS.Glance.Web/Web.config
@@ -111,9 +111,6 @@
       <setting name="Password" serializeAs="String">
         <value>Alsmisel2015</value>
       </setting>
-      <setting name="ApiUrl" serializeAs="String">
-        <value>https://alsmon.adeetc.e.ipl.pt:8443/ODataDAL/DW.svc/</value>
-      </setting>
       <setting name="ApplicationId" serializeAs="String">
         <value>ALS Glance</value>
       </setting>
@@ -124,7 +121,10 @@
         <value>60</value>
       </setting>
       <setting name="ResponseCacheEnabled" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
+      </setting>
+      <setting name="ApiUrl" serializeAs="String">
+        <value>https://alsmon.adeetc.e.ipl.pt:8443/ODataDAL/DW.svc/</value>
       </setting>
     </ALS.Glance.Web.Properties.Settings>
   </applicationSettings>
