--- a/ALS.Glance.Models/ALS.Glance.Models.csproj
+++ b/ALS.Glance.Models/ALS.Glance.Models.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="D.cs" />
     <Compile Include="YearBounds.cs" />
     <Compile Include="AgeBounds.cs" />
     <Compile Include="ApplicationSettings.cs" />
