--- a/ALS.Glance.Web/Web.config
+++ b/ALS.Glance.Web/Web.config
@@ -124,7 +124,7 @@
         <value>True</value>
       </setting>
       <setting name="ApiUrl" serializeAs="String">
-        <value>https://alsmon.adeetc.e.ipl.pt:8443/ODataDAL/DW.svc/</value>
+        <value>http://alsmon.adeetc.e.ipl.pt:8080/ODataDAL/DW.svc/</value>
       </setting>
     </ALS.Glance.Web.Properties.Settings>
   </applicationSettings>
